// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateReferralLetterPdfBuffer sender is 'sender address' generates letter pdf html correctly 1`] = `
"<html>
  <head>
      <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"pdf.css\\">
  </head>
  <body>
    <div id=\\"pageHeader-first\\">
      <div style=\\"text-align: center;\\">
        <img style=\\"max-width: 223px\\" src=\\"file:/app/instance-files/images/header_text.png\\" />
      </div>
      <div style=\\"text-align: center; margin-top: 8px\\">
        <img style=\\"max-width: 42px\\" src=\\"file:/app/instance-files/images/icon.ico\\" />
      </div>
    </div>
    <div id=\\"pageHeader\\" style=\\"font-size:8.5pt; color: #7F7F7F;\\">
      Recipient Title and Name<br/>
      July 01, 2018<br/>
      Page {{page}}
    </div>

    <div id=\\"pageFooter\\" style=\\"text-align: center; margin-top: 16px\\">
            <span  style=\\"display:inline-block; margin: 6px 16px 0 0\\">
                <img style=\\"max-width: 30px\\" src=\\"file:/app/instance-files/images/icon.ico\\" />
            </span>
      <span style=\\"display:inline-block; font-size:7pt; color: #7F7F7F;\\">
                INDEPENDENT POLICE MONITOR <br />
                2714 Canal Street, Suite 201 | NEW ORLEANS, LOUISIANA | 70119 <br />
                Phone (504) 309-9799| Fax (504) 309-7345
            </span>
      <span  style=\\"display:inline-block; width: 46px\\">&nbsp;</span>
    </div>
    <p style=\\"color: #7F7F7F;\\">
      SUSAN HUTSON
      <br>
      INDEPENDENT POLICE MONITOR
    </p>
    <p><br></p>
    July 01, 2018
    <p><br></p>
    Recipient Title and Name</br>
    Recipient Address
    <p><br></p>
    <p><strong>RE: Complaint Referral; OIPM Complaint CC-2011-0099</strong></p>
    <p><br></p>
    <p>Dear Recipient Title and Name:</p>
    <p><br></p>
    <p> Letter Body </p>
    <p><br></p>
    Sincerely,
    <p><br></p>
    <p><br></p>
    <p><br></p>
    Sender Address<br> Sender Address Second Line
    <p><br></p>
    Transcribed by: Transcriber
  </body>
</html>"
`;

exports[`generateReferralLetterPdfBuffer sender is 'sender address' pdf create gets called with expected letter html when letter is edited 1`] = `
"<html>
  <head>
      <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"pdf.css\\">
  </head>
  <body>
    <div id=\\"pageHeader-first\\">
      <div style=\\"text-align: center;\\">
        <img style=\\"max-width: 223px\\" src=\\"file:/app/instance-files/images/header_text.png\\" />
      </div>
      <div style=\\"text-align: center; margin-top: 8px\\">
        <img style=\\"max-width: 42px\\" src=\\"file:/app/instance-files/images/icon.ico\\" />
      </div>
    </div>
    <div id=\\"pageHeader\\" style=\\"font-size:8.5pt; color: #7F7F7F;\\">
      recipient title and name<br/>
      July 01, 2018<br/>
      Page {{page}}
    </div>

    <div id=\\"pageFooter\\" style=\\"text-align: center; margin-top: 16px\\">
            <span  style=\\"display:inline-block; margin: 6px 16px 0 0\\">
                <img style=\\"max-width: 30px\\" src=\\"file:/app/instance-files/images/icon.ico\\" />
            </span>
      <span style=\\"display:inline-block; font-size:7pt; color: #7F7F7F;\\">
                INDEPENDENT POLICE MONITOR <br />
                2714 Canal Street, Suite 201 | NEW ORLEANS, LOUISIANA | 70119 <br />
                Phone (504) 309-9799| Fax (504) 309-7345
            </span>
      <span  style=\\"display:inline-block; width: 46px\\">&nbsp;</span>
    </div>
    <p style=\\"color: #7F7F7F;\\">
      SUSAN HUTSON
      <br>
      INDEPENDENT POLICE MONITOR
    </p>
    <p><br></p>
    July 01, 2018
    <p><br></p>
    recipient title and name</br>
    recipient address
    <p><br></p>
    <p><strong>RE: Complaint Referral; OIPM Complaint PO2017-0001</strong></p>
    <p><br></p>
    <p>Dear recipient title and name:</p>
    <p><br></p>
    Custom Letter HTML
    <p><br></p>
    Sincerely,
    <p><br></p>
    <p><br></p>
    <p><br></p>
    sender address
    <p><br></p>
    Transcribed by: transcriber
  </body>
</html>"
`;

exports[`generateReferralLetterPdfBuffer sender is 'sender address' pdf create gets called with expected letter html when letter is generated 1`] = `
"<html>
  <head>
      <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"pdf.css\\">
  </head>
  <body>
    <div id=\\"pageHeader-first\\">
      <div style=\\"text-align: center;\\">
        <img style=\\"max-width: 223px\\" src=\\"file:/app/instance-files/images/header_text.png\\" />
      </div>
      <div style=\\"text-align: center; margin-top: 8px\\">
        <img style=\\"max-width: 42px\\" src=\\"file:/app/instance-files/images/icon.ico\\" />
      </div>
    </div>
    <div id=\\"pageHeader\\" style=\\"font-size:8.5pt; color: #7F7F7F;\\">
      recipient title and name<br/>
      July 01, 2018<br/>
      Page {{page}}
    </div>

    <div id=\\"pageFooter\\" style=\\"text-align: center; margin-top: 16px\\">
            <span  style=\\"display:inline-block; margin: 6px 16px 0 0\\">
                <img style=\\"max-width: 30px\\" src=\\"file:/app/instance-files/images/icon.ico\\" />
            </span>
      <span style=\\"display:inline-block; font-size:7pt; color: #7F7F7F;\\">
                INDEPENDENT POLICE MONITOR <br />
                2714 Canal Street, Suite 201 | NEW ORLEANS, LOUISIANA | 70119 <br />
                Phone (504) 309-9799| Fax (504) 309-7345
            </span>
      <span  style=\\"display:inline-block; width: 46px\\">&nbsp;</span>
    </div>
    <p style=\\"color: #7F7F7F;\\">
      SUSAN HUTSON
      <br>
      INDEPENDENT POLICE MONITOR
    </p>
    <p><br></p>
    July 01, 2018
    <p><br></p>
    recipient title and name</br>
    recipient address
    <p><br></p>
    <p><strong>RE: Complaint Referral; OIPM Complaint PO2017-0001</strong></p>
    <p><br></p>
    <p>Dear recipient title and name:</p>
    <p><br></p>
    
    <p><br></p>
    Sincerely,
    <p><br></p>
    <p><br></p>
    <p><br></p>
    sender address
    <p><br></p>
    Transcribed by: transcriber
  </body>
</html>"
`;

exports[`generateReferralLetterPdfBuffer sender is 'sender address' should update case reference prefix to AC when primary complainant is anonymized 1`] = `
"<html>
  <head>
      <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"pdf.css\\">
  </head>
  <body>
    <div id=\\"pageHeader-first\\">
      <div style=\\"text-align: center;\\">
        <img style=\\"max-width: 223px\\" src=\\"file:/app/instance-files/images/header_text.png\\" />
      </div>
      <div style=\\"text-align: center; margin-top: 8px\\">
        <img style=\\"max-width: 42px\\" src=\\"file:/app/instance-files/images/icon.ico\\" />
      </div>
    </div>
    <div id=\\"pageHeader\\" style=\\"font-size:8.5pt; color: #7F7F7F;\\">
      recipient title and name<br/>
      July 01, 2018<br/>
      Page {{page}}
    </div>

    <div id=\\"pageFooter\\" style=\\"text-align: center; margin-top: 16px\\">
            <span  style=\\"display:inline-block; margin: 6px 16px 0 0\\">
                <img style=\\"max-width: 30px\\" src=\\"file:/app/instance-files/images/icon.ico\\" />
            </span>
      <span style=\\"display:inline-block; font-size:7pt; color: #7F7F7F;\\">
                INDEPENDENT POLICE MONITOR <br />
                2714 Canal Street, Suite 201 | NEW ORLEANS, LOUISIANA | 70119 <br />
                Phone (504) 309-9799| Fax (504) 309-7345
            </span>
      <span  style=\\"display:inline-block; width: 46px\\">&nbsp;</span>
    </div>
    <p style=\\"color: #7F7F7F;\\">
      SUSAN HUTSON
      <br>
      INDEPENDENT POLICE MONITOR
    </p>
    <p><br></p>
    July 01, 2018
    <p><br></p>
    recipient title and name</br>
    recipient address
    <p><br></p>
    <p><strong>RE: Complaint Referral; OIPM Complaint AC2017-0001</strong></p>
    <p><br></p>
    <p>Dear recipient title and name:</p>
    <p><br></p>
    
    <p><br></p>
    Sincerely,
    <p><br></p>
    <p><br></p>
    <p><br></p>
    sender address
    <p><br></p>
    Transcribed by: transcriber
  </body>
</html>"
`;

exports[`generateReferralLetterPdfBuffer sender is 'sender address' signature is not included when sender is not stella even if includeSignature is true 1`] = `
"<html>
  <head>
      <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"pdf.css\\">
  </head>
  <body>
    <div id=\\"pageHeader-first\\">
      <div style=\\"text-align: center;\\">
        <img style=\\"max-width: 223px\\" src=\\"file:/app/instance-files/images/header_text.png\\" />
      </div>
      <div style=\\"text-align: center; margin-top: 8px\\">
        <img style=\\"max-width: 42px\\" src=\\"file:/app/instance-files/images/icon.ico\\" />
      </div>
    </div>
    <div id=\\"pageHeader\\" style=\\"font-size:8.5pt; color: #7F7F7F;\\">
      recipient title and name<br/>
      July 01, 2018<br/>
      Page {{page}}
    </div>

    <div id=\\"pageFooter\\" style=\\"text-align: center; margin-top: 16px\\">
            <span  style=\\"display:inline-block; margin: 6px 16px 0 0\\">
                <img style=\\"max-width: 30px\\" src=\\"file:/app/instance-files/images/icon.ico\\" />
            </span>
      <span style=\\"display:inline-block; font-size:7pt; color: #7F7F7F;\\">
                INDEPENDENT POLICE MONITOR <br />
                2714 Canal Street, Suite 201 | NEW ORLEANS, LOUISIANA | 70119 <br />
                Phone (504) 309-9799| Fax (504) 309-7345
            </span>
      <span  style=\\"display:inline-block; width: 46px\\">&nbsp;</span>
    </div>
    <p style=\\"color: #7F7F7F;\\">
      SUSAN HUTSON
      <br>
      INDEPENDENT POLICE MONITOR
    </p>
    <p><br></p>
    July 01, 2018
    <p><br></p>
    recipient title and name</br>
    recipient address
    <p><br></p>
    <p><strong>RE: Complaint Referral; OIPM Complaint PO2017-0001</strong></p>
    <p><br></p>
    <p>Dear recipient title and name:</p>
    <p><br></p>
    Custom Letter HTML
    <p><br></p>
    Sincerely,
    <p><br></p>
    <p><br></p>
    <p><br></p>
    sender address
    <p><br></p>
    Transcribed by: transcriber
  </body>
</html>"
`;

exports[`generateReferralLetterPdfBuffer sender is stella signature is included when sender is stella and includeSignature is true 1`] = `
"<html>
  <head>
      <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"pdf.css\\">
  </head>
  <body>
    <div id=\\"pageHeader-first\\">
      <div style=\\"text-align: center;\\">
        <img style=\\"max-width: 223px\\" src=\\"file:/app/instance-files/images/header_text.png\\" />
      </div>
      <div style=\\"text-align: center; margin-top: 8px\\">
        <img style=\\"max-width: 42px\\" src=\\"file:/app/instance-files/images/icon.ico\\" />
      </div>
    </div>
    <div id=\\"pageHeader\\" style=\\"font-size:8.5pt; color: #7F7F7F;\\">
      recipient title and name<br/>
      July 01, 2018<br/>
      Page {{page}}
    </div>

    <div id=\\"pageFooter\\" style=\\"text-align: center; margin-top: 16px\\">
            <span  style=\\"display:inline-block; margin: 6px 16px 0 0\\">
                <img style=\\"max-width: 30px\\" src=\\"file:/app/instance-files/images/icon.ico\\" />
            </span>
      <span style=\\"display:inline-block; font-size:7pt; color: #7F7F7F;\\">
                INDEPENDENT POLICE MONITOR <br />
                2714 Canal Street, Suite 201 | NEW ORLEANS, LOUISIANA | 70119 <br />
                Phone (504) 309-9799| Fax (504) 309-7345
            </span>
      <span  style=\\"display:inline-block; width: 46px\\">&nbsp;</span>
    </div>
    <p style=\\"color: #7F7F7F;\\">
      SUSAN HUTSON
      <br>
      INDEPENDENT POLICE MONITOR
    </p>
    <p><br></p>
    July 01, 2018
    <p><br></p>
    recipient title and name</br>
    recipient address
    <p><br></p>
    <p><strong>RE: Complaint Referral; OIPM Complaint PO2017-0001</strong></p>
    <p><br></p>
    <p>Dear recipient title and name:</p>
    <p><br></p>
    
    <p><br></p>
    Sincerely,
    <p><br></p>
    <img style=\\"max-height: 55px\\" src=file:/app/instance-files/images/stella_cziment.png />
    <p><br></p>
    Stella Cziment
    <p><br></p>
    Transcribed by: transcriber
  </body>
</html>"
`;

exports[`generateReferralLetterPdfBuffer sender is stella signature is not included when includeSignature is false 1`] = `
"<html>
  <head>
      <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"pdf.css\\">
  </head>
  <body>
    <div id=\\"pageHeader-first\\">
      <div style=\\"text-align: center;\\">
        <img style=\\"max-width: 223px\\" src=\\"file:/app/instance-files/images/header_text.png\\" />
      </div>
      <div style=\\"text-align: center; margin-top: 8px\\">
        <img style=\\"max-width: 42px\\" src=\\"file:/app/instance-files/images/icon.ico\\" />
      </div>
    </div>
    <div id=\\"pageHeader\\" style=\\"font-size:8.5pt; color: #7F7F7F;\\">
      recipient title and name<br/>
      July 01, 2018<br/>
      Page {{page}}
    </div>

    <div id=\\"pageFooter\\" style=\\"text-align: center; margin-top: 16px\\">
            <span  style=\\"display:inline-block; margin: 6px 16px 0 0\\">
                <img style=\\"max-width: 30px\\" src=\\"file:/app/instance-files/images/icon.ico\\" />
            </span>
      <span style=\\"display:inline-block; font-size:7pt; color: #7F7F7F;\\">
                INDEPENDENT POLICE MONITOR <br />
                2714 Canal Street, Suite 201 | NEW ORLEANS, LOUISIANA | 70119 <br />
                Phone (504) 309-9799| Fax (504) 309-7345
            </span>
      <span  style=\\"display:inline-block; width: 46px\\">&nbsp;</span>
    </div>
    <p style=\\"color: #7F7F7F;\\">
      SUSAN HUTSON
      <br>
      INDEPENDENT POLICE MONITOR
    </p>
    <p><br></p>
    July 01, 2018
    <p><br></p>
    recipient title and name</br>
    recipient address
    <p><br></p>
    <p><strong>RE: Complaint Referral; OIPM Complaint PO2017-0001</strong></p>
    <p><br></p>
    <p>Dear recipient title and name:</p>
    <p><br></p>
    
    <p><br></p>
    Sincerely,
    <p><br></p>
    <p><br></p>
    <p><br></p>
    Stella Cziment
    <p><br></p>
    Transcribed by: transcriber
  </body>
</html>"
`;
